# ece118

files/base/: ES_Framework.c  ES_Framework.h
files/include/base/: ES_ServiceHeaders.h
files/src/events/: TemplateEventChecker.c
files/template/: ES_Configure.h  TemplateEventChecker.c  TemplateEventChecker.h  TemplateHSM.h  TemplateService.h  main.c
lab0/: Makefile  c.xml  convert.sh  lab0.md  lab0_prelab.md  latte.theme  my_project.elf  my_project.hex
lab0/docs/: lab0.md  lab0_prelab.md  prelab0.md  tmux.md
lab0/src/: main.c
lab0/themes/: frappe.theme
lab1/: prelab
lab1/docs/: prelab1.md
lab1/src/: filter.spice
lab1/themes/: latte.theme  mocha.theme
lab2/: prelab
lab2/docs/: prelab2.md
lab2/themes/: macchiato.theme
lab3/: CMakeLists.txt  compile_commands.json  copy.sh
lab3/.cache/clangd/index/: AD.c.6D19221046D03834.idx  AD.h.475D5FD445AAB579.idx  BOARD.c.F8BCEE75F919A3A7.idx  BOARD.h.E0B49ACADCAC5754.idx  ES_CheckEvents.c.E3F2011B983E68B1.idx  ES_CheckEvents.h.42755E0AB0243B6D.idx  ES_Configure.h.5BC91A8844AB4EC1.idx  ES_Events.h.ADC46B26B1FBD8C2.idx  ES_Framework.c.4F9DA3F4C037B04C.idx  ES_Framework.h.F2E283B55338D864.idx  ES_General.h.19070E508FEFE8AC.idx  ES_KeyboardInput.c.D0C95A9BC0EF858E.idx  ES_KeyboardInput.h.A89079410FE399D5.idx  ES_LookupTables.c.6029562AEE74CA5A.idx  ES_LookupTables.h.12F310E40786ECC9.idx  ES_Port.h.3E1E51CFC7AD5DAD.idx  ES_PostList.c.3D9CE6D01C7BC5C3.idx  ES_PostList.h.E5A01F537E42818A.idx  ES_PriorTables.h.D4B290132EFAE87E.idx  ES_Queue.c.1FA5A1A755C59B5C.idx  ES_Queue.h.76F8AE2DBF649BC0.idx  ES_ServiceHeaders.h.83FE9FEA1C2B25CC.idx  ES_TattleTale.c.A814A8C4D4FE6B10.idx  ES_TattleTale.h.7C5A6BFACE533EE8.idx  ES_TimerService.c.B542E545CB9D7D81.idx  ES_TimerService.h.006090CD2C2DB077.idx  ES_Timers.c.9748908A9EEEDF70.idx  ES_Timers.h.364B96059B556805.idx  IO_Ports.c.CE312C2866D7B066.idx  IO_Ports.h.073A42471D210735.idx  LED.c.E7ECEC62FBA68451.idx  LED.h.7E37D8D0A40F6DAD.idx  RC_Servo.c.61CE35D4CA8C21C0.idx  RC_Servo.h.046FE776F5D26759.idx  Serial.c.D8149CCEF5854706.idx  Serial.h.3C0E2E2880084562.idx  Stepper.c.92AA3F14BFD808EC.idx  Stepper.h.AE217E8BBF56951C.idx  Stepper_Extension.h.6732F41D11AA3117.idx  TemplateEventChecker.c.9FDD0C493F760B51.idx  (+14 more)
lab3/docs/: lab.typ  prelab.typ
lab3/include/drivers/: AD.h  Serial.h  Stepper.h  Stepper_Extension.h  pwm.h
lab3/src/app/: part1.c  part2.c  part4.c  part5.c  part6.c
lab3/src/drivers/: Stepper.c  Stepper_Extension.c  pwm.c  roach.c
midterm/: part1.typ  part4.typ  part5.typ
